--- a/RecipeFrontend/Pages/RecipeDetails.razor
+++ b/RecipeFrontend/Pages/RecipeDetails.razor
@@ -59,6 +59,8 @@ else
                 }
             </div>
         </div>
+        <a class="btn btn-primary" href="/recipes/@recipe.Id">View Recipe</a>
+
     </div>
     }
 
