--- a/RecipeFrontend/Pages/Recipes.razor
+++ b/RecipeFrontend/Pages/Recipes.razor
@@ -27,7 +27,7 @@ else
             </div>
         }
     </ul>
-    <div>
+    <div class="mb-3">
         <a class="btn btn-primary" href="/recipes/add">Add Recipe</a>
     </div>
 }
