--- a/RecipeFrontend/Pages/AddRecipe.razor
+++ b/RecipeFrontend/Pages/AddRecipe.razor
@@ -57,7 +57,7 @@
     </div>
 
 
-    @* <div class="mb-3">
+    <div class="mb-3">
         <label class="form-label mb-3">Steps</label>
         @for (int i = 0; i < newRecipe.Steps.Count; i++)
         {
@@ -72,7 +72,7 @@
             </div>
         }
         <button class="btn btn-outline-primary mb-3" type="button" @onclick="AddStep">+ Add Step</button>
-    </div>*@
+    </div>
     <button class="btn btn-primary mb-3" type="submit">Add Recipe</button> 
 </EditForm>
 
