--- a/RecipeFrontend/Layout/MainLayout.razor
+++ b/RecipeFrontend/Layout/MainLayout.razor
@@ -1,12 +1,27 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
     <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
+
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/recipes">RecipeBook</a>
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav me-auto">
+                        <li class="nav-item"><a class="nav-link" href="/recipes">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/recipes/add">Add Recipe</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
         <article class="content px-4">
             @Body
         </article>
+
+
+        <footer class="bg-light text-center text-muted py-3 mt-5 border-top">
+            <div>© 2025 RecipeBook | Built with Blazor By Shulamit Attali </div>
+        </footer>
+
     </main>
 </div>
