--- a/RecipeFrontend/Pages/Recipes.razor
+++ b/RecipeFrontend/Pages/Recipes.razor
@@ -1,13 +1,12 @@
-﻿@page "/"
+﻿@page "/recipes"
 @using RecipeFrontend.DTOs
 @using RecipeFrontend.Services
 @inject NavigationManager Navigation
 @inject RecipeService recipeService
 
-
 <div class="p-5 mb-4 bg-light rounded-3 shadow-sm">
     <div class="container-fluid py-3">
-        <h1 class="display-5 fw-bold text-center"> Welcome to Recipe Website</h1>
+        <h1 class="display-5 fw-bold text-center"> Welcome to Recipes Book</h1>
         <p class="fs-4 text-center">Save, share, and discover your favorite recipes</p>
     </div>
 </div>
@@ -23,26 +22,23 @@ else if (recipes.Count == 0)
 }
 else
 {
-
     <div class="container">
         <div class="row">
             @foreach (var recipe in recipes)
             {
                 <div class="col-md-6 col-lg-4 mb-4">
-                    <div class="card h-100 shadow-sm bg-light">
+                    <div class="card h-100">
                         <div class="card-body d-flex flex-column">
                             <h5 class="card-title">@recipe.Title</h5>
                             <p class="card-text">@recipe.Description</p>
                             <p class="card-text text-muted mt-auto">By @recipe.UserFullName</p>
-                            <a class="btn btn-primary mt-3" href="/recipes/@recipe.Id">View Recipe</a>
+                            <a class="btn btn-outline-primary mt-3" href="/recipes/@recipe.Id">View Recipe</a>
                         </div>
                     </div>
                 </div>
             }
         </div>
     </div>
-    <a href="/recipes/add" class="btn btn-primary btn-lg  mb-4">+ Add New Recipe</a>
-
 }
 
 @code {
