flex footer to the buttom

--- a/RecipeFrontend/Pages/Recipes.razor
+++ b/RecipeFrontend/Pages/Recipes.razor
@@ -14,7 +14,7 @@
 
 @if (recipes == null)
 {
-    <p><em>Loading...</em></p>
+    <p class="text-center"><em>Loading...</em></p>
 }
 else if (recipes.Count == 0)
 {
