--- a/RecipeFrontend/Layout/MainLayout.razor
+++ b/RecipeFrontend/Layout/MainLayout.razor
@@ -1,27 +1,28 @@
 ﻿@inherits LayoutComponentBase
 <div class="page">
     <main>
+        <div class="d-flex flex-column min-vh-100">
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/recipes">RecipeBook</a>
-                <div class="collapse navbar-collapse">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item"><a class="nav-link" href="/recipes">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/recipes/add">Add Recipe</a></li>
-                    </ul>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/recipes">RecipeBook</a>
+                    <div class="collapse navbar-collapse">
+                        <ul class="navbar-nav me-auto">
+                            <li class="nav-item"><a class="nav-link" href="/recipes">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/recipes/add">Add Recipe</a></li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <article class="content px-4">
-            @Body
-        </article>
+            <article class="flex-grow-1 content px-4">
+                @Body
+            </article>
 
 
-        <footer class="bg-light text-center text-muted py-3 mt-5 border-top">
-            <div>© 2025 RecipeBook | Built with Blazor By Shulamit Attali </div>
-        </footer>
-
+            <footer class="bg-light text-center text-muted py-3 mt-5 border-top">
+                <div>© 2025 RecipeBook | Built with Blazor By Shulamit Attali </div>
+            </footer>
+        </div>
     </main>
 </div>
