--- a/RecipeFrontend/Pages/RecipeDetails.razor
+++ b/RecipeFrontend/Pages/RecipeDetails.razor
@@ -64,11 +64,11 @@ else
 
                 <div class="d-flex justify-content-center gap-3 my-4">
                     <a class="btn btn-sm btn-primary px-4 py-2 w-25" href="/edit-recipe/@recipe.Id">Edit Recipe</a>
-                    <button class="btn btn-sm btn-danger px-4 py-2 w-25">Delete Recipe</button>
+                    <button class="btn btn-sm btn-danger px-4 py-2 w-25" @onclick="()=>DeleteRecipe(recipe.Id)">Delete Recipe</button>
                 </div>
             </div>
-            </div>
         </div>
+    </div>
 
 
 }
