--- a/RecipeFrontend/Pages/AddRecipe.razor
+++ b/RecipeFrontend/Pages/AddRecipe.razor
@@ -56,8 +56,31 @@
         <button class="btn btn-outline-primary mb-3" type="button" @onclick="AddIngredient">+ Add Ingredient</button>
     </div>
 
-
     <div class="mb-3">
+        <label class="form-label mb-3">Steps</label>
+        @if (newRecipe.Steps != null && newRecipe.Steps.Count > 0)
+        {
+            @for (int i = 0; i < newRecipe.Steps.Count; i++)
+            {
+                var index = i;
+                <div class="input-group mb-2">
+                    <InputNumber class="form-control" placeholder="Order"
+                               @bind-Value="newRecipe.Steps[index].Order" />
+
+                    <InputText class="form-control" placeholder="Instruction"
+                               @bind-Value="newRecipe.Steps[index].Instruction" />
+
+                    <button class="btn btn-outline-danger" type="button"
+                            @onclick="@(() => RemoveStep(index))">
+                        –
+                    </button>
+                </div>
+            }
+
+        }
+        <button class="btn btn-outline-primary mb-3" type="button" @onclick="AddStep">+ Add Step</button>
+    </div>
+    @* <div class="mb-3">
         <label class="form-label mb-3">Steps</label>
         @for (int i = 0; i < newRecipe.Steps.Count; i++)
         {
@@ -72,10 +95,10 @@
             </div>
         }
         <button class="btn btn-outline-primary mb-3" type="button" @onclick="AddStep">+ Add Step</button>
-    </div>
-    <div class="mb-3">
+    </div> *@
+    @* <div class="mb-3">
         <InputFile OnChange="HandleFileSelected" />
-    </div>
+    </div> *@
 
     <button class="btn btn-primary mb-3" type="submit">Add Recipe</button> 
 </EditForm>
