fixed file upload

--- a/RecipeFrontend/Pages/AddRecipe.razor
+++ b/RecipeFrontend/Pages/AddRecipe.razor
@@ -97,9 +97,9 @@
 
         <button class="btn btn-outline-primary mb-3" type="button" @onclick="AddStep">+ Add Step</button>
     </div>
-    @* <div class="mb-3">
+    <div class="mb-3">
         <InputFile OnChange="HandleFileSelected" />
-    </div> *@
+    </div>
 
     <button class="btn btn-primary mb-3" type="submit">Add Recipe</button>
 </EditForm>
